[package]
name = "bb-nft"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bb_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
mpl-bubblegum = "1.2.0"
#solana-program = "1.18.10"
anchor-spl = "0.29.0"
spl-account-compression = { version = "0.3.0", features = ["cpi"] }